code/typescript/FactSetFunds/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Funds client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v1.7.0-blue)](https://developer.factset.com/api-catalog/factset-funds-api)
[![npm](https://img.shields.io/badge/npm-v4.0.0-orange)](https://www.npmjs.com/package/@factset/sdk-factsetfunds/v/4.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet Mutual Funds data offers over 50 fund- and share class-specific data points for mutual funds listed in the United States. <p>FactSet Mutual Funds Reference provides fund-specific reference information as well as FactSet's proprietary classification system. It includes but is not limited to the following coverage 
  * Fund descriptions 
  * A seven-tier classification system
  * Leverage information
  * Fees and expenses 
  * Portfolio managers 
  
  FactSet Mutual Funds Time Series provides quantitative data items on a historical basis. It includes but is not limited to the following coverage 
  * Net asset value
  * Fund flows 
  * Assets under management
  * Total return 
<p>This API is rate-limited to 10 requests per second and 10 concurrent requests per user.</p>


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.7.0
- SDK version: 4.0.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-factsetfunds@4.0.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-factsetfunds@4.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, BatchProcessingApi } = require('@factset/sdk-factsetfunds');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new BatchProcessingApi();
const id = "id_example"; // String | Batch Request identifier.

// Call api endpoint
apiInstance.getBatchData(id).then(
  data => {

      // data is a responsewrapper: GetBatchDataResponseWrapper
      switch (data.statusCode) {

          case 200:
             // BatchResultResponse
             console.log(data.getResponse200());
             break;

          case 202:
             // BatchStatusResponse
             console.log(data.getResponse202());
             break;

      }

  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-factsetfunds');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*factsetfunds.BatchProcessingApi* | [**getBatchData**](docs/BatchProcessingApi.md#getBatchData) | **GET** /factset-funds/v1/batch-result | Returns the response for a Batch Request
*factsetfunds.BatchProcessingApi* | [**getBatchStatus**](docs/BatchProcessingApi.md#getBatchStatus) | **GET** /factset-funds/v1/batch-status | Returns the status for a Batch Request
*factsetfunds.DistributionsApi* | [**getFundsDistCurrent**](docs/DistributionsApi.md#getFundsDistCurrent) | **GET** /factset-funds/v1/distributions/current | Get Most Recent Fund Distributions
*factsetfunds.DistributionsApi* | [**getFundsDistCurrentForList**](docs/DistributionsApi.md#getFundsDistCurrentForList) | **POST** /factset-funds/v1/distributions/current | Get Most Recent Fund Distributions
*factsetfunds.DistributionsApi* | [**getFundsDistHistorical**](docs/DistributionsApi.md#getFundsDistHistorical) | **GET** /factset-funds/v1/distributions/historical | Get Historical Fund Distributions
*factsetfunds.DistributionsApi* | [**getFundsDistHistoricalForList**](docs/DistributionsApi.md#getFundsDistHistoricalForList) | **POST** /factset-funds/v1/distributions/historical | Get Historical Fund Distributions
*factsetfunds.FundFlowsAUMApi* | [**getFundsAum**](docs/FundFlowsAUMApi.md#getFundsAum) | **GET** /factset-funds/v1/aum | Get Fund AUM for a requested date range and list of ids
*factsetfunds.FundFlowsAUMApi* | [**getFundsAumForList**](docs/FundFlowsAUMApi.md#getFundsAumForList) | **POST** /factset-funds/v1/aum | Get Fund AUM for a requested date range and large list of ids
*factsetfunds.FundFlowsAUMApi* | [**getFundsFlows**](docs/FundFlowsAUMApi.md#getFundsFlows) | **GET** /factset-funds/v1/flows | Get Fund Flows for a requested date range and list of ids
*factsetfunds.FundFlowsAUMApi* | [**getFundsFlowsForList**](docs/FundFlowsAUMApi.md#getFundsFlowsForList) | **POST** /factset-funds/v1/flows | Get Fund Flows for a requested date range and large list of ids
*factsetfunds.GroupHoldingsApi* | [**getGroupHoldings**](docs/GroupHoldingsApi.md#getGroupHoldings) | **GET** /factset-funds/v1/holdings/group | Get group holdings for a specific date and group.
*factsetfunds.GroupHoldingsApi* | [**getGroupHoldingsForList**](docs/GroupHoldingsApi.md#getGroupHoldingsForList) | **POST** /factset-funds/v1/holdings/group | Get group holdings for a specific date and group.
*factsetfunds.HelperApi* | [**getStatuses**](docs/HelperApi.md#getStatuses) | **GET** /factset-funds/v1/status | Get Fund&#39;s current status and database availability
*factsetfunds.HelperApi* | [**getStatusesForList**](docs/HelperApi.md#getStatusesForList) | **POST** /factset-funds/v1/status | Get Fund&#39;s current status and database availability for large list of ids.
*factsetfunds.MarketAggregatesApi* | [**getMarketAggregates**](docs/MarketAggregatesApi.md#getMarketAggregates) | **GET** /factset-funds/v1/aggregates/market | Get market aggregates for a requested time series.
*factsetfunds.MarketAggregatesApi* | [**getMarketAggregatesForList**](docs/MarketAggregatesApi.md#getMarketAggregatesForList) | **POST** /factset-funds/v1/aggregates/market | Get market aggregates for a requested time series.
*factsetfunds.PricesReturnsApi* | [**getFundsPrices**](docs/PricesReturnsApi.md#getFundsPrices) | **GET** /factset-funds/v1/prices | Get Fund Prices (NAV) for a requested time-series
*factsetfunds.PricesReturnsApi* | [**getFundsPricesForList**](docs/PricesReturnsApi.md#getFundsPricesForList) | **POST** /factset-funds/v1/prices | Get Fund Prices (NAV) for a requested date range and large list of ids.
*factsetfunds.PricesReturnsApi* | [**getFundsReturns**](docs/PricesReturnsApi.md#getFundsReturns) | **GET** /factset-funds/v1/returns | Get Fund Returns for a requested time-series
*factsetfunds.PricesReturnsApi* | [**getFundsReturnsForList**](docs/PricesReturnsApi.md#getFundsReturnsForList) | **POST** /factset-funds/v1/returns | Get Fund Returns for a requested time-series and large list of ids
*factsetfunds.PricesReturnsApi* | [**getFundsReturnsRange**](docs/PricesReturnsApi.md#getFundsReturnsRange) | **GET** /factset-funds/v1/returns-range | Get Fund Returns for a user-defined date range
*factsetfunds.PricesReturnsApi* | [**getFundsReturnsRangeForList**](docs/PricesReturnsApi.md#getFundsReturnsRangeForList) | **POST** /factset-funds/v1/returns-range | Get Fund Returns over pre-defined time horizons as of a specific date for large list of ids.
*factsetfunds.PricesReturnsApi* | [**getFundsReturnsSnapshot**](docs/PricesReturnsApi.md#getFundsReturnsSnapshot) | **GET** /factset-funds/v1/returns-snapshot | Get Fund Returns over pre-defined time horizons as of a specific date.
*factsetfunds.PricesReturnsApi* | [**getFundsReturnsSnapshotForList**](docs/PricesReturnsApi.md#getFundsReturnsSnapshotForList) | **POST** /factset-funds/v1/returns-snapshot | Get Fund Returns over pre-defined time horizons as of a specific date.
*factsetfunds.ReferenceApi* | [**getFundsBenchmarkDetails**](docs/ReferenceApi.md#getFundsBenchmarkDetails) | **GET** /factset-funds/v1/benchmark-details | Get the Fund&#39;s Primary and Segment Benchmark Details
*factsetfunds.ReferenceApi* | [**getFundsBenchmarkDetailsForList**](docs/ReferenceApi.md#getFundsBenchmarkDetailsForList) | **POST** /factset-funds/v1/benchmark-details | Get the Fund&#39;s Primary and Segment Benchmark details for large list of ids.
*factsetfunds.ReferenceApi* | [**getFundsClassifications**](docs/ReferenceApi.md#getFundsClassifications) | **GET** /factset-funds/v1/classifications | Get basic Fund Classifications
*factsetfunds.ReferenceApi* | [**getFundsClassificationsForList**](docs/ReferenceApi.md#getFundsClassificationsForList) | **POST** /factset-funds/v1/classifications | Get basic Fund Classifications for a large list of ids.
*factsetfunds.ReferenceApi* | [**getFundsCostsFees**](docs/ReferenceApi.md#getFundsCostsFees) | **GET** /factset-funds/v1/costs-fees | Get the Fund&#39;s Costs, Investment minimums and Risk, and Fees.
*factsetfunds.ReferenceApi* | [**getFundsCostsFeesForList**](docs/ReferenceApi.md#getFundsCostsFeesForList) | **POST** /factset-funds/v1/costs-fees | Get the Fund&#39;s Costs, Investment minimums and Risk, and Fees for large list of ids.
*factsetfunds.ReferenceApi* | [**getFundsManagers**](docs/ReferenceApi.md#getFundsManagers) | **GET** /factset-funds/v1/managers | Get a list of Fund Managers and related details for a list of ids.
*factsetfunds.ReferenceApi* | [**getFundsManagersForList**](docs/ReferenceApi.md#getFundsManagersForList) | **POST** /factset-funds/v1/managers | Get a list of Fund Managers and related details for a large list of ids.
*factsetfunds.ReferenceApi* | [**getFundsSummary**](docs/ReferenceApi.md#getFundsSummary) | **GET** /factset-funds/v1/summary | Get basic reference summary data for a Fund.
*factsetfunds.ReferenceApi* | [**getFundsSummaryForList**](docs/ReferenceApi.md#getFundsSummaryForList) | **POST** /factset-funds/v1/summary | Get basic reference data for a large list of Fund ids.
*factsetfunds.ReferenceApi* | [**getRelatedFunds**](docs/ReferenceApi.md#getRelatedFunds) | **GET** /factset-funds/v1/related-funds | Get a list of Related Funds for a list of Fund ids.
*factsetfunds.ReferenceApi* | [**getRelatedFundsForList**](docs/ReferenceApi.md#getRelatedFundsForList) | **POST** /factset-funds/v1/related-funds | Get a list of Related Funds for a large list of Fund ids.
*factsetfunds.ScreeningOperationsApi* | [**createContentSet**](docs/ScreeningOperationsApi.md#createContentSet) | **POST** /factset-funds/v1/screener/content-sets/create | Create a new custom content set with required fields from the default content sets.
*factsetfunds.ScreeningOperationsApi* | [**deleteContentSet**](docs/ScreeningOperationsApi.md#deleteContentSet) | **DELETE** /factset-funds/v1/screener/content-sets/{name} | Delete a custom content set.
*factsetfunds.ScreeningOperationsApi* | [**getContentSets**](docs/ScreeningOperationsApi.md#getContentSets) | **GET** /factset-funds/v1/screener/content-sets | Get the content sets that are permissioned for the user.
*factsetfunds.ScreeningOperationsApi* | [**getDistinctCount**](docs/ScreeningOperationsApi.md#getDistinctCount) | **POST** /factset-funds/v1/screener/distinct-count | Returns the number of records for a given field spread across all possible values.
*factsetfunds.ScreeningOperationsApi* | [**getFields**](docs/ScreeningOperationsApi.md#getFields) | **GET** /factset-funds/v1/screener/fields | Get the list of fields available for given content set.
*factsetfunds.ScreeningOperationsApi* | [**getScreenerData**](docs/ScreeningOperationsApi.md#getScreenerData) | **POST** /factset-funds/v1/screener/search | Returns all the records that match the given criteria.
*factsetfunds.ScreeningOperationsApi* | [**getStatistics**](docs/ScreeningOperationsApi.md#getStatistics) | **POST** /factset-funds/v1/screener/statistics | Returns the statistics and histogram data for a given field within the specified content sets.


## Documentation for Models

 - [factsetfunds.Aum](docs/Aum.md)
 - [factsetfunds.AumRequest](docs/AumRequest.md)
 - [factsetfunds.AumResponse](docs/AumResponse.md)
 - [factsetfunds.Batch](docs/Batch.md)
 - [factsetfunds.BatchErrorObject](docs/BatchErrorObject.md)
 - [factsetfunds.BatchErrorResponse](docs/BatchErrorResponse.md)
 - [factsetfunds.BatchResult](docs/BatchResult.md)
 - [factsetfunds.BatchResultResponse](docs/BatchResultResponse.md)
 - [factsetfunds.BatchStatus](docs/BatchStatus.md)
 - [factsetfunds.BatchStatusResponse](docs/BatchStatusResponse.md)
 - [factsetfunds.BenchmarkDetails](docs/BenchmarkDetails.md)
 - [factsetfunds.BenchmarkDetailsRequest](docs/BenchmarkDetailsRequest.md)
 - [factsetfunds.BenchmarkDetailsResponse](docs/BenchmarkDetailsResponse.md)
 - [factsetfunds.Classifications](docs/Classifications.md)
 - [factsetfunds.ClassificationsRequest](docs/ClassificationsRequest.md)
 - [factsetfunds.ClassificationsResponse](docs/ClassificationsResponse.md)
 - [factsetfunds.ContentSet](docs/ContentSet.md)
 - [factsetfunds.ContentSetItem](docs/ContentSetItem.md)
 - [factsetfunds.ContentSetsResponse](docs/ContentSetsResponse.md)
 - [factsetfunds.CostsFees](docs/CostsFees.md)
 - [factsetfunds.CostsFeesRequest](docs/CostsFeesRequest.md)
 - [factsetfunds.CostsFeesResponse](docs/CostsFeesResponse.md)
 - [factsetfunds.CreateContentSetRequest](docs/CreateContentSetRequest.md)
 - [factsetfunds.CreateContentSetRequestBody](docs/CreateContentSetRequestBody.md)
 - [factsetfunds.CreateContentSetResponse](docs/CreateContentSetResponse.md)
 - [factsetfunds.CreateContentSetResponseData](docs/CreateContentSetResponseData.md)
 - [factsetfunds.CreateRequestFieldObject](docs/CreateRequestFieldObject.md)
 - [factsetfunds.Criterion](docs/Criterion.md)
 - [factsetfunds.CustomContentSetItem](docs/CustomContentSetItem.md)
 - [factsetfunds.DataType](docs/DataType.md)
 - [factsetfunds.DistCurrent](docs/DistCurrent.md)
 - [factsetfunds.DistCurrentRequest](docs/DistCurrentRequest.md)
 - [factsetfunds.DistCurrentResponse](docs/DistCurrentResponse.md)
 - [factsetfunds.DistHistorical](docs/DistHistorical.md)
 - [factsetfunds.DistHistoricalRequest](docs/DistHistoricalRequest.md)
 - [factsetfunds.DistHistoricalResponse](docs/DistHistoricalResponse.md)
 - [factsetfunds.DistinctCountData](docs/DistinctCountData.md)
 - [factsetfunds.DistinctCountMeta](docs/DistinctCountMeta.md)
 - [factsetfunds.DistinctCountRequest](docs/DistinctCountRequest.md)
 - [factsetfunds.DistinctCountRequestBody](docs/DistinctCountRequestBody.md)
 - [factsetfunds.DistinctCountResponse](docs/DistinctCountResponse.md)
 - [factsetfunds.DistributionOrYieldDist](docs/DistributionOrYieldDist.md)
 - [factsetfunds.DividendAdjust](docs/DividendAdjust.md)
 - [factsetfunds.ErrorObjectScreener](docs/ErrorObjectScreener.md)
 - [factsetfunds.ErrorResponse](docs/ErrorResponse.md)
 - [factsetfunds.ErrorResponseScreener](docs/ErrorResponseScreener.md)
 - [factsetfunds.ErrorResponseSubErrors](docs/ErrorResponseSubErrors.md)
 - [factsetfunds.Field](docs/Field.md)
 - [factsetfunds.FieldResponseObject](docs/FieldResponseObject.md)
 - [factsetfunds.FieldValues](docs/FieldValues.md)
 - [factsetfunds.FieldsResponse](docs/FieldsResponse.md)
 - [factsetfunds.Filter](docs/Filter.md)
 - [factsetfunds.Flows](docs/Flows.md)
 - [factsetfunds.FlowsRequest](docs/FlowsRequest.md)
 - [factsetfunds.FlowsResponse](docs/FlowsResponse.md)
 - [factsetfunds.Frequency](docs/Frequency.md)
 - [factsetfunds.FrequencyAum](docs/FrequencyAum.md)
 - [factsetfunds.FundsPricesRequest](docs/FundsPricesRequest.md)
 - [factsetfunds.FundsPricesResponse](docs/FundsPricesResponse.md)
 - [factsetfunds.FundsReturnsRequest](docs/FundsReturnsRequest.md)
 - [factsetfunds.FundsReturnsResponse](docs/FundsReturnsResponse.md)
 - [factsetfunds.FundsReturnsSnapshotRequest](docs/FundsReturnsSnapshotRequest.md)
 - [factsetfunds.FundsReturnsSnapshotResponse](docs/FundsReturnsSnapshotResponse.md)
 - [factsetfunds.Group](docs/Group.md)
 - [factsetfunds.GroupHolding](docs/GroupHolding.md)
 - [factsetfunds.GroupHoldingsRequest](docs/GroupHoldingsRequest.md)
 - [factsetfunds.GroupHoldingsResponse](docs/GroupHoldingsResponse.md)
 - [factsetfunds.HistogramData](docs/HistogramData.md)
 - [factsetfunds.JoinType](docs/JoinType.md)
 - [factsetfunds.Lang](docs/Lang.md)
 - [factsetfunds.Managers](docs/Managers.md)
 - [factsetfunds.ManagersRequest](docs/ManagersRequest.md)
 - [factsetfunds.ManagersResponse](docs/ManagersResponse.md)
 - [factsetfunds.MarketAggregate](docs/MarketAggregate.md)
 - [factsetfunds.MarketAggregatesRequest](docs/MarketAggregatesRequest.md)
 - [factsetfunds.MarketAggregatesResponse](docs/MarketAggregatesResponse.md)
 - [factsetfunds.Meta](docs/Meta.md)
 - [factsetfunds.MetaPagination](docs/MetaPagination.md)
 - [factsetfunds.NestedFieldValueObject](docs/NestedFieldValueObject.md)
 - [factsetfunds.NestedFieldValues](docs/NestedFieldValues.md)
 - [factsetfunds.Operator](docs/Operator.md)
 - [factsetfunds.Pagination](docs/Pagination.md)
 - [factsetfunds.Prices](docs/Prices.md)
 - [factsetfunds.RelatedFunds](docs/RelatedFunds.md)
 - [factsetfunds.RelatedFundsRequest](docs/RelatedFundsRequest.md)
 - [factsetfunds.RelatedFundsResponse](docs/RelatedFundsResponse.md)
 - [factsetfunds.Returns](docs/Returns.md)
 - [factsetfunds.ReturnsRange](docs/ReturnsRange.md)
 - [factsetfunds.ReturnsRangeRequest](docs/ReturnsRangeRequest.md)
 - [factsetfunds.ReturnsRangeResponse](docs/ReturnsRangeResponse.md)
 - [factsetfunds.ReturnsSnapshot](docs/ReturnsSnapshot.md)
 - [factsetfunds.SearchCriterion](docs/SearchCriterion.md)
 - [factsetfunds.SearchData](docs/SearchData.md)
 - [factsetfunds.SearchFilter](docs/SearchFilter.md)
 - [factsetfunds.SearchMeta](docs/SearchMeta.md)
 - [factsetfunds.SearchRequest](docs/SearchRequest.md)
 - [factsetfunds.SearchRequestBody](docs/SearchRequestBody.md)
 - [factsetfunds.SearchResponse](docs/SearchResponse.md)
 - [factsetfunds.SplitAdjust](docs/SplitAdjust.md)
 - [factsetfunds.StatisticsRequest](docs/StatisticsRequest.md)
 - [factsetfunds.StatisticsRequestBody](docs/StatisticsRequestBody.md)
 - [factsetfunds.StatisticsResponse](docs/StatisticsResponse.md)
 - [factsetfunds.StatisticsResponseData](docs/StatisticsResponseData.md)
 - [factsetfunds.Statuses](docs/Statuses.md)
 - [factsetfunds.StatusesRequest](docs/StatusesRequest.md)
 - [factsetfunds.StatusesResponse](docs/StatusesResponse.md)
 - [factsetfunds.Summaries](docs/Summaries.md)
 - [factsetfunds.SummariesRequest](docs/SummariesRequest.md)
 - [factsetfunds.SummariesResponse](docs/SummariesResponse.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
