code/typescript/FactSetFunds/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Funds client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/factset-funds-api)
[![npm](https://img.shields.io/badge/npm-v0.40.0-orange)](https://www.npmjs.com/package/@factset/sdk-factsetfunds/v/0.40.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet Mutual Funds and ETFs Reference provides fund-specific reference information as well as FactSet's proprietary classification system. It includes but is not limited to the following coverage 
  * Fund descriptions 
  * A seven-tier classification system
  * Leverage information
  * Fees and expenses 
  * Portfolio managers 
  
  FactSet Mutual Funds Time Series provides quantitative data items on a historical basis. It includes but is not limited to the following coverage 
  * Net asset value
  * Fund flows 
  * Assets under management
  * Total return 
  
 In addition to core reference and time series data, the API enables broader fund analytics and workflows, including: 
 * Fund summary and classification insights such as domicile, structure, segments, and similar funds  
 * Performance analytics including historical returns, snapshot returns across time horizons, and yield data 
 * Cost, fee, and risk metrics including expense ratios, regulatory/tax exposure, and risk measures 
 * Portfolio exposure and analytics including asset allocation, sector weightage, geographic exposure, and top holdings  
 * Trading and liquidity characteristics for evaluating tradability  
 * ETF-specific scoring and ratings to assess efficiency, tradability, and fit relative to benchmarks  
 * Distribution and income data for understanding payouts and investor returns 
 <p>This API is rate-limited to 10 requests per second and 10 concurrent requests per user.


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.40.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-factsetfunds@0.40.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-factsetfunds@0.40.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, PortfolioExposureAndAnalysisApi } = require('@factset/sdk-factsetfunds');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new PortfolioExposureAndAnalysisApi();
const ids = ["MABAX-US"]; // [String] | The requested fund identifier. FactSet Identifiers, tickers, CUSIP, SEDOL, and ISIN are accepted inputs. <p>***IDs limit** =  200 per request*</p> *<p>Make note, GET Method URL request lines are also limited to a total length of 8192 bytes (8KB). In cases where the service allows for thousands of IDs, which may lead to exceeding this request line limit of 8KB, its advised for any requests with large request lines to be requested through the respective \"POST\" method.</p>*
const opts = {
  'keyItemsType': new factsetfunds.KeyItemsType() // KeyItemsType | The Key Items type report.
};

// Call api endpoint
apiInstance.getFinancialKeyItems(ids, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-factsetfunds');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/factset-funds/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getFinancialKeyItems**](docs/PortfolioExposureAndAnalysisApi.md#getFinancialKeyItems) | **GET** /financials/key-items | Get Financial Key Items for Funds
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getFinancialKeyItemsForList**](docs/PortfolioExposureAndAnalysisApi.md#getFinancialKeyItemsForList) | **POST** /financials/key-items | Get Financial Key Items for Funds
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getPortfolioAnalytics**](docs/PortfolioExposureAndAnalysisApi.md#getPortfolioAnalytics) | **GET** /portfolio/analytics | Get Asset Allocation, Sector Weightage, Geographic Revenue and Market Capitalization details
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getPortfolioAnalyticsForList**](docs/PortfolioExposureAndAnalysisApi.md#getPortfolioAnalyticsForList) | **POST** /portfolio/analytics | Get Asset Allocation, Sector Weightage, Geographic Revenue and Market Capitalization details
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getPortfolioStatistics**](docs/PortfolioExposureAndAnalysisApi.md#getPortfolioStatistics) | **GET** /portfolio/statistics | Get Portfolio Statistics for Funds
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getPortfolioStatisticsForList**](docs/PortfolioExposureAndAnalysisApi.md#getPortfolioStatisticsForList) | **POST** /portfolio/statistics | Get Portfolio Statistics for Funds
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getRiskAnalytics**](docs/PortfolioExposureAndAnalysisApi.md#getRiskAnalytics) | **GET** /risk-analytics | Get Credit Risk and Rate Risk Analytics
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getRiskAnalyticsForList**](docs/PortfolioExposureAndAnalysisApi.md#getRiskAnalyticsForList) | **POST** /risk-analytics | Get Credit Risk and Rate Risk Analytics.
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getTop10Holdings**](docs/PortfolioExposureAndAnalysisApi.md#getTop10Holdings) | **GET** /holdings/top-10 | Get Top 10 Holdings
*factsetfunds.PortfolioExposureAndAnalysisApi* | [**getTop10HoldingsForList**](docs/PortfolioExposureAndAnalysisApi.md#getTop10HoldingsForList) | **POST** /holdings/top-10 | Get Top 10 Holdings
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsDistributions**](docs/PricesReturnsAndDistributionsApi.md#getFundsDistributions) | **GET** /distributions | Get Fund Distributions (Current or Historical)
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsDistributionsForList**](docs/PricesReturnsAndDistributionsApi.md#getFundsDistributionsForList) | **POST** /distributions | Get Fund Distributions (Current or Historical) for a list
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsPrices**](docs/PricesReturnsAndDistributionsApi.md#getFundsPrices) | **GET** /prices | Get Fund Prices (NAV) for a requested time-series
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsPricesForList**](docs/PricesReturnsAndDistributionsApi.md#getFundsPricesForList) | **POST** /prices | Get Fund Prices (NAV) for a requested date range and large list of IDs.
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsReturns**](docs/PricesReturnsAndDistributionsApi.md#getFundsReturns) | **GET** /returns | Get Fund Returns for a requested time-series
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsReturnsForList**](docs/PricesReturnsAndDistributionsApi.md#getFundsReturnsForList) | **POST** /returns | Get Fund Returns for a requested time-series and large list of IDs.
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsReturnsRange**](docs/PricesReturnsAndDistributionsApi.md#getFundsReturnsRange) | **GET** /returns/range | Get Fund Returns for a user-defined date range
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsReturnsRangeForList**](docs/PricesReturnsAndDistributionsApi.md#getFundsReturnsRangeForList) | **POST** /returns/range | Get Fund Returns over pre-defined time horizons as of a specific date for large list of IDs.
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsReturnsSnapshot**](docs/PricesReturnsAndDistributionsApi.md#getFundsReturnsSnapshot) | **GET** /returns/snapshot | Get Fund Returns over pre-defined time horizons as of a specific date.
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsReturnsSnapshotForList**](docs/PricesReturnsAndDistributionsApi.md#getFundsReturnsSnapshotForList) | **POST** /returns/snapshot | Get Fund Returns over pre-defined time horizons as of a specific date.
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsYield**](docs/PricesReturnsAndDistributionsApi.md#getFundsYield) | **GET** /yields | Get Fund Yield for a user-defined date range for large list of IDs.
*factsetfunds.PricesReturnsAndDistributionsApi* | [**getFundsYieldForList**](docs/PricesReturnsAndDistributionsApi.md#getFundsYieldForList) | **POST** /yields | Get Fund Yield for a user-defined date range for large list of IDs.
*factsetfunds.ScoringApi* | [**getScoringDetails**](docs/ScoringApi.md#getScoringDetails) | **GET** /scoring | Get Scoring Details for ETFs
*factsetfunds.ScoringApi* | [**getScoringForList**](docs/ScoringApi.md#getScoringForList) | **POST** /scoring | Get Scoring Details for ETFs
*factsetfunds.ScreenerOperationsApi* | [**createContentSet**](docs/ScreenerOperationsApi.md#createContentSet) | **POST** /screener/content-sets/create | Create a new custom content set with required fields from the default content sets.
*factsetfunds.ScreenerOperationsApi* | [**deleteContentSet**](docs/ScreenerOperationsApi.md#deleteContentSet) | **DELETE** /screener/content-sets/{name} | Delete a custom content set.
*factsetfunds.ScreenerOperationsApi* | [**getContentSets**](docs/ScreenerOperationsApi.md#getContentSets) | **GET** /screener/content-sets | Get the content sets that are permissioned for the user.
*factsetfunds.ScreenerOperationsApi* | [**getDistinctCount**](docs/ScreenerOperationsApi.md#getDistinctCount) | **POST** /screener/distinct-count | Returns the number of records for a given field spread across all possible values.
*factsetfunds.ScreenerOperationsApi* | [**getFields**](docs/ScreenerOperationsApi.md#getFields) | **GET** /screener/fields | Get the list of fields available for given content set.
*factsetfunds.ScreenerOperationsApi* | [**getScreenerData**](docs/ScreenerOperationsApi.md#getScreenerData) | **POST** /screener/search | Returns all the records that match the given criteria.
*factsetfunds.ScreenerOperationsApi* | [**getStatistics**](docs/ScreenerOperationsApi.md#getStatistics) | **POST** /screener/statistics | Returns the statistics and histogram data for a given field within the specified content sets.
*factsetfunds.SummarySegmentsAndStatsApi* | [**getFundsAum**](docs/SummarySegmentsAndStatsApi.md#getFundsAum) | **GET** /aum | Get Fund AUM for a requested date range and list of IDs
*factsetfunds.SummarySegmentsAndStatsApi* | [**getFundsAumForList**](docs/SummarySegmentsAndStatsApi.md#getFundsAumForList) | **POST** /aum | Get Fund AUM for a requested date range and large list of IDs
*factsetfunds.SummarySegmentsAndStatsApi* | [**getFundsFlows**](docs/SummarySegmentsAndStatsApi.md#getFundsFlows) | **GET** /flows | Get Fund Flows for a requested date range and list of IDs
*factsetfunds.SummarySegmentsAndStatsApi* | [**getFundsFlowsForList**](docs/SummarySegmentsAndStatsApi.md#getFundsFlowsForList) | **POST** /flows | Get Fund Flows for a requested date range and large list of IDs
*factsetfunds.SummarySegmentsAndStatsApi* | [**getFundsSummary**](docs/SummarySegmentsAndStatsApi.md#getFundsSummary) | **GET** /summary | Get basic reference summary data for a Fund.
*factsetfunds.SummarySegmentsAndStatsApi* | [**getFundsSummaryForList**](docs/SummarySegmentsAndStatsApi.md#getFundsSummaryForList) | **POST** /summary | Get basic reference data for a large list of Fund IDs.
*factsetfunds.SummarySegmentsAndStatsApi* | [**getSegmentsAndStructure**](docs/SummarySegmentsAndStatsApi.md#getSegmentsAndStructure) | **GET** /segments-and-structure | Get Fund Classification, Similar Funds, Segments, and Fund Structure
*factsetfunds.SummarySegmentsAndStatsApi* | [**getSegmentsAndStructureForList**](docs/SummarySegmentsAndStatsApi.md#getSegmentsAndStructureForList) | **POST** /segments-and-structure | Get Fund Classification, Similar Funds, Segments, and Fund Structure.
*factsetfunds.TaxesFeesAndRisksApi* | [**getFundsCostsFees**](docs/TaxesFeesAndRisksApi.md#getFundsCostsFees) | **GET** /costs-fees | Get the Fund&#39;s Costs, Investment minimums and Risk, and Fees.
*factsetfunds.TaxesFeesAndRisksApi* | [**getFundsCostsFeesForList**](docs/TaxesFeesAndRisksApi.md#getFundsCostsFeesForList) | **POST** /costs-fees | Get the Fund&#39;s Costs, Investment minimums and Risk, and Fees for large list of IDs.
*factsetfunds.TaxesFeesAndRisksApi* | [**getTaxesAndRisks**](docs/TaxesFeesAndRisksApi.md#getTaxesAndRisks) | **GET** /taxes-and-risks | Get Regulatory/Tax, Tax Exposure, and Risk Measures
*factsetfunds.TaxesFeesAndRisksApi* | [**getTaxesAndRisksForList**](docs/TaxesFeesAndRisksApi.md#getTaxesAndRisksForList) | **POST** /taxes-and-risks | Get Regulatory/Tax, Tax Exposure, and Risk Measures.
*factsetfunds.TradingApi* | [**getTrading**](docs/TradingApi.md#getTrading) | **GET** /trading | Get Trading Characteristics
*factsetfunds.TradingApi* | [**getTradingForList**](docs/TradingApi.md#getTradingForList) | **POST** /trading | Get Trading Characteristics


## Documentation for Models

 - [factsetfunds.AnalyticsType](docs/AnalyticsType.md)
 - [factsetfunds.AssetAllocation](docs/AssetAllocation.md)
 - [factsetfunds.AssetAllocationAllOf](docs/AssetAllocationAllOf.md)
 - [factsetfunds.AssetAllocationType](docs/AssetAllocationType.md)
 - [factsetfunds.Aum](docs/Aum.md)
 - [factsetfunds.AumAllOf](docs/AumAllOf.md)
 - [factsetfunds.AumRequest](docs/AumRequest.md)
 - [factsetfunds.AumRequestData](docs/AumRequestData.md)
 - [factsetfunds.AumResponse](docs/AumResponse.md)
 - [factsetfunds.BenchmarkDetails](docs/BenchmarkDetails.md)
 - [factsetfunds.BenchmarkDetailsAllOf](docs/BenchmarkDetailsAllOf.md)
 - [factsetfunds.BenchmarkDetailsType](docs/BenchmarkDetailsType.md)
 - [factsetfunds.Classifications](docs/Classifications.md)
 - [factsetfunds.ClassificationsAllOf](docs/ClassificationsAllOf.md)
 - [factsetfunds.ClassificationsType](docs/ClassificationsType.md)
 - [factsetfunds.ContentSet](docs/ContentSet.md)
 - [factsetfunds.ContentSetItem](docs/ContentSetItem.md)
 - [factsetfunds.ContentSetsResponse](docs/ContentSetsResponse.md)
 - [factsetfunds.CostsFees](docs/CostsFees.md)
 - [factsetfunds.CostsFeesAllOf](docs/CostsFeesAllOf.md)
 - [factsetfunds.CostsFeesRequest](docs/CostsFeesRequest.md)
 - [factsetfunds.CostsFeesRequestData](docs/CostsFeesRequestData.md)
 - [factsetfunds.CostsFeesResponse](docs/CostsFeesResponse.md)
 - [factsetfunds.CreateContentSetRequest](docs/CreateContentSetRequest.md)
 - [factsetfunds.CreateContentSetRequestBody](docs/CreateContentSetRequestBody.md)
 - [factsetfunds.CreateContentSetResponse](docs/CreateContentSetResponse.md)
 - [factsetfunds.CreateContentSetResponseData](docs/CreateContentSetResponseData.md)
 - [factsetfunds.CreateRequestFieldObject](docs/CreateRequestFieldObject.md)
 - [factsetfunds.CreditRisk](docs/CreditRisk.md)
 - [factsetfunds.CreditRiskAllOf](docs/CreditRiskAllOf.md)
 - [factsetfunds.CreditRiskType](docs/CreditRiskType.md)
 - [factsetfunds.Criterion](docs/Criterion.md)
 - [factsetfunds.CurrencyResponseField](docs/CurrencyResponseField.md)
 - [factsetfunds.CustomContentSetItem](docs/CustomContentSetItem.md)
 - [factsetfunds.DateResponseField](docs/DateResponseField.md)
 - [factsetfunds.DistCurrent](docs/DistCurrent.md)
 - [factsetfunds.DistCurrentAllOf](docs/DistCurrentAllOf.md)
 - [factsetfunds.DistCurrentType](docs/DistCurrentType.md)
 - [factsetfunds.DistHistorical](docs/DistHistorical.md)
 - [factsetfunds.DistHistoricalAllOf](docs/DistHistoricalAllOf.md)
 - [factsetfunds.DistHistoricalType](docs/DistHistoricalType.md)
 - [factsetfunds.DistinctCountData](docs/DistinctCountData.md)
 - [factsetfunds.DistinctCountMeta](docs/DistinctCountMeta.md)
 - [factsetfunds.DistinctCountRequest](docs/DistinctCountRequest.md)
 - [factsetfunds.DistinctCountRequestBody](docs/DistinctCountRequestBody.md)
 - [factsetfunds.DistinctCountResponse](docs/DistinctCountResponse.md)
 - [factsetfunds.DistributionType](docs/DistributionType.md)
 - [factsetfunds.DistributionsItem](docs/DistributionsItem.md)
 - [factsetfunds.DistributionsRequest](docs/DistributionsRequest.md)
 - [factsetfunds.DistributionsRequestItem](docs/DistributionsRequestItem.md)
 - [factsetfunds.DistributionsResponse](docs/DistributionsResponse.md)
 - [factsetfunds.DividendAdjust](docs/DividendAdjust.md)
 - [factsetfunds.ErrorResponse](docs/ErrorResponse.md)
 - [factsetfunds.Field](docs/Field.md)
 - [factsetfunds.FieldResponseObject](docs/FieldResponseObject.md)
 - [factsetfunds.FieldValues](docs/FieldValues.md)
 - [factsetfunds.FieldsResponse](docs/FieldsResponse.md)
 - [factsetfunds.Filter](docs/Filter.md)
 - [factsetfunds.FinancialsKeyItems](docs/FinancialsKeyItems.md)
 - [factsetfunds.FinancialsKeyItemsRequest](docs/FinancialsKeyItemsRequest.md)
 - [factsetfunds.FinancialsKeyItemsRequestData](docs/FinancialsKeyItemsRequestData.md)
 - [factsetfunds.FinancialsKeyItemsResponse](docs/FinancialsKeyItemsResponse.md)
 - [factsetfunds.Flows](docs/Flows.md)
 - [factsetfunds.FlowsAllOf](docs/FlowsAllOf.md)
 - [factsetfunds.FlowsRequest](docs/FlowsRequest.md)
 - [factsetfunds.FlowsRequestData](docs/FlowsRequestData.md)
 - [factsetfunds.FlowsResponse](docs/FlowsResponse.md)
 - [factsetfunds.Frequency](docs/Frequency.md)
 - [factsetfunds.FrequencyAum](docs/FrequencyAum.md)
 - [factsetfunds.Fund](docs/Fund.md)
 - [factsetfunds.FundStructure](docs/FundStructure.md)
 - [factsetfunds.FundStructureAllOf](docs/FundStructureAllOf.md)
 - [factsetfunds.FundStructureType](docs/FundStructureType.md)
 - [factsetfunds.FundVsSegmentBenchmark](docs/FundVsSegmentBenchmark.md)
 - [factsetfunds.FundsErrorObject](docs/FundsErrorObject.md)
 - [factsetfunds.FundsErrorObjectSource](docs/FundsErrorObjectSource.md)
 - [factsetfunds.FundsPricesRequest](docs/FundsPricesRequest.md)
 - [factsetfunds.FundsPricesRequestData](docs/FundsPricesRequestData.md)
 - [factsetfunds.FundsPricesResponse](docs/FundsPricesResponse.md)
 - [factsetfunds.FundsReturnsRequest](docs/FundsReturnsRequest.md)
 - [factsetfunds.FundsReturnsRequestData](docs/FundsReturnsRequestData.md)
 - [factsetfunds.FundsReturnsResponse](docs/FundsReturnsResponse.md)
 - [factsetfunds.FundsReturnsSnapshotRequest](docs/FundsReturnsSnapshotRequest.md)
 - [factsetfunds.FundsReturnsSnapshotRequestData](docs/FundsReturnsSnapshotRequestData.md)
 - [factsetfunds.FundsReturnsSnapshotResponse](docs/FundsReturnsSnapshotResponse.md)
 - [factsetfunds.GeographicRevenue](docs/GeographicRevenue.md)
 - [factsetfunds.GeographicRevenueAllOf](docs/GeographicRevenueAllOf.md)
 - [factsetfunds.GeographicRevenueType](docs/GeographicRevenueType.md)
 - [factsetfunds.Growth](docs/Growth.md)
 - [factsetfunds.GrowthAllOf](docs/GrowthAllOf.md)
 - [factsetfunds.GrowthType](docs/GrowthType.md)
 - [factsetfunds.HistogramData](docs/HistogramData.md)
 - [factsetfunds.Holdings](docs/Holdings.md)
 - [factsetfunds.IdentifierResponseFields](docs/IdentifierResponseFields.md)
 - [factsetfunds.JoinType](docs/JoinType.md)
 - [factsetfunds.KeyItemsType](docs/KeyItemsType.md)
 - [factsetfunds.Lang](docs/Lang.md)
 - [factsetfunds.Managers](docs/Managers.md)
 - [factsetfunds.Margins](docs/Margins.md)
 - [factsetfunds.MarginsAllOf](docs/MarginsAllOf.md)
 - [factsetfunds.MarginsType](docs/MarginsType.md)
 - [factsetfunds.MarketCapitalization](docs/MarketCapitalization.md)
 - [factsetfunds.MarketCapitalizationAllOf](docs/MarketCapitalizationAllOf.md)
 - [factsetfunds.MarketCapitalizationType](docs/MarketCapitalizationType.md)
 - [factsetfunds.Meta](docs/Meta.md)
 - [factsetfunds.MetaPagination](docs/MetaPagination.md)
 - [factsetfunds.MetaRequest](docs/MetaRequest.md)
 - [factsetfunds.NavDataType](docs/NavDataType.md)
 - [factsetfunds.NestedFieldValueObject](docs/NestedFieldValueObject.md)
 - [factsetfunds.NestedFieldValues](docs/NestedFieldValues.md)
 - [factsetfunds.OAS](docs/OAS.md)
 - [factsetfunds.Operator](docs/Operator.md)
 - [factsetfunds.Pagination](docs/Pagination.md)
 - [factsetfunds.PaginationRequest](docs/PaginationRequest.md)
 - [factsetfunds.PerShare](docs/PerShare.md)
 - [factsetfunds.PerShareAllOf](docs/PerShareAllOf.md)
 - [factsetfunds.PerShareType](docs/PerShareType.md)
 - [factsetfunds.PortfolioAnalyticsItem](docs/PortfolioAnalyticsItem.md)
 - [factsetfunds.PortfolioAnalyticsRequest](docs/PortfolioAnalyticsRequest.md)
 - [factsetfunds.PortfolioAnalyticsRequestData](docs/PortfolioAnalyticsRequestData.md)
 - [factsetfunds.PortfolioAnalyticsResponse](docs/PortfolioAnalyticsResponse.md)
 - [factsetfunds.PortfolioStatistics](docs/PortfolioStatistics.md)
 - [factsetfunds.PortfolioStatisticsAllOf](docs/PortfolioStatisticsAllOf.md)
 - [factsetfunds.PortfolioStatisticsRequest](docs/PortfolioStatisticsRequest.md)
 - [factsetfunds.PortfolioStatisticsRequestData](docs/PortfolioStatisticsRequestData.md)
 - [factsetfunds.PortfolioStatisticsResponse](docs/PortfolioStatisticsResponse.md)
 - [factsetfunds.Prices](docs/Prices.md)
 - [factsetfunds.PricesAllOf](docs/PricesAllOf.md)
 - [factsetfunds.RateRisk](docs/RateRisk.md)
 - [factsetfunds.RateRiskAllOf](docs/RateRiskAllOf.md)
 - [factsetfunds.RateRiskType](docs/RateRiskType.md)
 - [factsetfunds.Ratios](docs/Ratios.md)
 - [factsetfunds.RatiosAllOf](docs/RatiosAllOf.md)
 - [factsetfunds.RatiosType](docs/RatiosType.md)
 - [factsetfunds.RegulationsTaxDetails](docs/RegulationsTaxDetails.md)
 - [factsetfunds.RegulationsTaxDetailsAllOf](docs/RegulationsTaxDetailsAllOf.md)
 - [factsetfunds.RegulationsTaxDetailsType](docs/RegulationsTaxDetailsType.md)
 - [factsetfunds.Returns](docs/Returns.md)
 - [factsetfunds.ReturnsAllOf](docs/ReturnsAllOf.md)
 - [factsetfunds.ReturnsRange](docs/ReturnsRange.md)
 - [factsetfunds.ReturnsRangeAllOf](docs/ReturnsRangeAllOf.md)
 - [factsetfunds.ReturnsRangeRequest](docs/ReturnsRangeRequest.md)
 - [factsetfunds.ReturnsRangeRequestData](docs/ReturnsRangeRequestData.md)
 - [factsetfunds.ReturnsRangeResponse](docs/ReturnsRangeResponse.md)
 - [factsetfunds.ReturnsSnapshot](docs/ReturnsSnapshot.md)
 - [factsetfunds.ReturnsSnapshotAllOf](docs/ReturnsSnapshotAllOf.md)
 - [factsetfunds.RiskAnalyticsItem](docs/RiskAnalyticsItem.md)
 - [factsetfunds.RiskAnalyticsRequest](docs/RiskAnalyticsRequest.md)
 - [factsetfunds.RiskAnalyticsRequestData](docs/RiskAnalyticsRequestData.md)
 - [factsetfunds.RiskAnalyticsResponse](docs/RiskAnalyticsResponse.md)
 - [factsetfunds.RiskMeasures](docs/RiskMeasures.md)
 - [factsetfunds.RiskMeasuresAllOf](docs/RiskMeasuresAllOf.md)
 - [factsetfunds.RiskMeasuresType](docs/RiskMeasuresType.md)
 - [factsetfunds.RiskType](docs/RiskType.md)
 - [factsetfunds.Scoring](docs/Scoring.md)
 - [factsetfunds.ScoringAllOf](docs/ScoringAllOf.md)
 - [factsetfunds.ScoringRequest](docs/ScoringRequest.md)
 - [factsetfunds.ScoringRequestData](docs/ScoringRequestData.md)
 - [factsetfunds.ScoringResponse](docs/ScoringResponse.md)
 - [factsetfunds.SearchCriterion](docs/SearchCriterion.md)
 - [factsetfunds.SearchData](docs/SearchData.md)
 - [factsetfunds.SearchFilter](docs/SearchFilter.md)
 - [factsetfunds.SearchMeta](docs/SearchMeta.md)
 - [factsetfunds.SearchRequest](docs/SearchRequest.md)
 - [factsetfunds.SearchRequestBody](docs/SearchRequestBody.md)
 - [factsetfunds.SearchResponse](docs/SearchResponse.md)
 - [factsetfunds.SectorWeightage](docs/SectorWeightage.md)
 - [factsetfunds.SectorWeightageAllOf](docs/SectorWeightageAllOf.md)
 - [factsetfunds.SectorWeightageType](docs/SectorWeightageType.md)
 - [factsetfunds.SegmentsAndStructureItem](docs/SegmentsAndStructureItem.md)
 - [factsetfunds.SegmentsAndStructureRequest](docs/SegmentsAndStructureRequest.md)
 - [factsetfunds.SegmentsAndStructureRequestData](docs/SegmentsAndStructureRequestData.md)
 - [factsetfunds.SegmentsAndStructureResponse](docs/SegmentsAndStructureResponse.md)
 - [factsetfunds.SimilarFunds](docs/SimilarFunds.md)
 - [factsetfunds.SimilarFundsAllOf](docs/SimilarFundsAllOf.md)
 - [factsetfunds.SimilarFundsType](docs/SimilarFundsType.md)
 - [factsetfunds.SplitAdjust](docs/SplitAdjust.md)
 - [factsetfunds.StatisticsRequest](docs/StatisticsRequest.md)
 - [factsetfunds.StatisticsRequestBody](docs/StatisticsRequestBody.md)
 - [factsetfunds.StatisticsResponse](docs/StatisticsResponse.md)
 - [factsetfunds.StatisticsResponseData](docs/StatisticsResponseData.md)
 - [factsetfunds.StructureType](docs/StructureType.md)
 - [factsetfunds.Summaries](docs/Summaries.md)
 - [factsetfunds.SummariesAllOf](docs/SummariesAllOf.md)
 - [factsetfunds.SummariesRequest](docs/SummariesRequest.md)
 - [factsetfunds.SummariesRequestData](docs/SummariesRequestData.md)
 - [factsetfunds.SummariesResponse](docs/SummariesResponse.md)
 - [factsetfunds.TaxExposure](docs/TaxExposure.md)
 - [factsetfunds.TaxExposureAllOf](docs/TaxExposureAllOf.md)
 - [factsetfunds.TaxExposureType](docs/TaxExposureType.md)
 - [factsetfunds.TaxItemsType](docs/TaxItemsType.md)
 - [factsetfunds.TaxesAndRisksItem](docs/TaxesAndRisksItem.md)
 - [factsetfunds.TaxesAndRisksRequest](docs/TaxesAndRisksRequest.md)
 - [factsetfunds.TaxesAndRisksRequestData](docs/TaxesAndRisksRequestData.md)
 - [factsetfunds.TaxesAndRisksResponse](docs/TaxesAndRisksResponse.md)
 - [factsetfunds.TopHoldings](docs/TopHoldings.md)
 - [factsetfunds.TopHoldingsAllOf](docs/TopHoldingsAllOf.md)
 - [factsetfunds.TopHoldingsRequest](docs/TopHoldingsRequest.md)
 - [factsetfunds.TopHoldingsRequestData](docs/TopHoldingsRequestData.md)
 - [factsetfunds.TopHoldingsResponse](docs/TopHoldingsResponse.md)
 - [factsetfunds.Trading](docs/Trading.md)
 - [factsetfunds.TradingAllOf](docs/TradingAllOf.md)
 - [factsetfunds.TradingRequest](docs/TradingRequest.md)
 - [factsetfunds.TradingResponse](docs/TradingResponse.md)
 - [factsetfunds.WAL](docs/WAL.md)
 - [factsetfunds.Yields](docs/Yields.md)
 - [factsetfunds.YieldsAllOf](docs/YieldsAllOf.md)
 - [factsetfunds.YieldsRequest](docs/YieldsRequest.md)
 - [factsetfunds.YieldsRequestData](docs/YieldsRequestData.md)
 - [factsetfunds.YieldsResponse](docs/YieldsResponse.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
